--- a/src/components/organisms/ProjectCard/ProjectCard.css
+++ b/src/components/organisms/ProjectCard/ProjectCard.css
@@ -10,7 +10,7 @@
 .slide-project-card {
     margin: 0 auto;
     min-height: 50vw;
-
+    cursor: grab;
 }
 
 .project-card-image {
