--- a/src/components/sections/AboutMe/AboutMe.css
+++ b/src/components/sections/AboutMe/AboutMe.css
@@ -19,7 +19,7 @@
     padding-right: 5%;
     float: left;
     margin-left: 5%;
-    cursor: pointer;
+    cursor: default;
 }
 
 .avatar-image-about-me {
