--- a/src/components/sections/Technologies/Technologies.css
+++ b/src/components/sections/Technologies/Technologies.css
@@ -17,7 +17,7 @@
 }
 .tech-logo {
     max-width: 25vw;
-    cursor: pointer;
+    cursor: default;
 
 }
 
@@ -29,7 +29,7 @@
     .technologies-container {
         background-color: rgba(238, 238, 180, 0.32);
         height: 100vh;
-        overflow: scroll;
+        overflow: auto;
     }
     .technologies-logos {
         grid-template-columns: .5fr .5fr .5fr;
